# weibo

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.codewhale/: instructions.md
.codewhale/pastes/: paste-2026-06-14-133941-405d8b04.md
config/: accounts.yaml  bilibili.yaml  feeds.yaml  keywords.yaml  supertopics.yaml
hugo/themes/evconduit/: theme.toml
hugo/themes/evconduit/layouts/: index.html
hugo/themes/evconduit/layouts/_default/: baseof.html  list.html  single.html
nginx/: nginx.conf  nginx.ssl.conf
output/: config.toml  hugo_stats.json
output/content/: _index.md
rsshub/: Dockerfile
src/: config.py  main.py
src/ingest/: crawl.py  rsshub.py
src/process/: ai.py  ocr.py
src/publish/: hugo.py
src/store/: models.py
