[project]
name = "weibo-pipeline"
version = "0.1.0"
description = "XPeng Weibo scraper → evconduit.com publishing pipeline"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "crawl4weibo>=0.5.2",
    "openai>=1.55.0",
    "pyyaml>=6.0.2",
    "schedule>=1.2.2",
    "structlog>=24.4.0",
    "python-frontmatter>=1.1.0",
    "jinja2>=3.1.4",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
